<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/ic_day"
            android:title="@string/drawer_day" />
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/ic_week"
            android:title="@string/drawer_week" />
        <item
            android:id="@+id/nav_month"
            android:icon="@drawable/ic_month"
            android:title="@string/drawer_month" />
        <item
            android:id="@+id/nav_taskboard"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_taskboard" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/drawer_settings" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
</menu>
